<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.35">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/newname"
                android:textSize="16dp"
                android:hint="Email or username"
                android:layout_marginBottom="24dp"
                android:background="@drawable/default_border"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/newDisplay"
                android:hint="Password"
                android:textSize="16sp"
                android:background="@drawable/default_border"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />

        <TextView
                android:text="Forgot password?"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:id="@+id/forgotPasswordLink"
                android:textSize="16sp"
                android:layout_marginTop="4dp"
                android:textColor="#888888"
                android:clickable="true"
                android:textAlignment="textStart"
                android:gravity="center"
                tools:ignore="RtlCompat" />

    </LinearLayout>

    <Button
            android:text="LOGIN"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="400dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="8dp"
            android:textSize="16sp"
            app:iconPadding="8dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.5" />

    <Button
            android:text="CREATE ACCOUNT"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="460dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="4dp"
            android:textSize="16dp"
            android:paddingLeft="32dp"
            android:paddingTop="10dp"
            android:paddingRight="32dp"
            android:paddingBottom="10dp"
            android:textColor="#FFFFFF"
            app:layout_constraintHorizontal_bias="0.5"
            android:background="@drawable/default_border" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/debugInfoText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="12dp"
            android:text="debug info" />

</androidx.constraintlayout.widget.ConstraintLayout>